Ldap fixes, Netiq connector added, Execute connector added